# flaskProject2

./: .flaskenv  README.md  configs.py  pyproject.toml  test.md
static/admin/css/: admin.css
static/admin/css/other/: analysis.css
static/component/layui/css/: layui.css
static/component/layui_exts/: excel.js
static/component/pear/css/module/: menu.css  tabPage.css  toast.css
static/component/pear/module/: admin.js  messageCenter.js
static/component/step-lay/: step.js
static/config/: pear.config.json
static/data/: ums_rights.csv  ums_role.csv
templates/ledger/impost/: vmimpost.html
templates/ledger/info/: index.html  index1.html
templates/system/department/: index.html
templates/system/rights/: index.html
templates/system/role/: index.html
templates/system/user/: index.html
templates/view/: index.html  login.html  register.html
testadmin/: __init__.py
testadmin/apis/: __init__.py  department.py  ledger.py  passport.py  rights.py  role.py  user.py
testadmin/extensions/: init_jwt.py  init_script.py
testadmin/orms/: __init__.py  _base.py  department.py  ledger.py  rights.py  role.py  user.py
testadmin/views/: __init__.py  ledger.py
