[tool.poetry]
name = "flaskproject2"
version = "0.1.0"
description = ""
authors = ["于博 <1037188058@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
flask-migrate = "^4.0.7"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
commitizen = "^3.25.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
